Bug 433728 - tastenbrett: fix some symbols not showing
Summary: tastenbrett: fix some symbols not showing
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 436523 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-28 02:49 UTC by ninjalj
Modified: 2024-06-30 11:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to kcms/keyboard/tastenbrett/key.cpp (1.77 KB, patch)
2021-02-28 02:49 UTC, ninjalj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ninjalj 2021-02-28 02:49:10 UTC
Created attachment 136244 [details]
Patch to kcms/keyboard/tastenbrett/key.cpp

In the keyboard preview, most diacritics from the internal QHash<unsigned long, char> deadMap don't show up, since their value doesn't fit on a char. 

On my system, non-spacing diacritics don't show up after fixing that. Unicode recommends applying them to NBSP to exhibit them in isolation. However, doing that, I get the diacritic applied to what appears to be the replacement character (the enclosed interrogation thingie).

Also "_" doesn't appear, since it is turned to a blank by the logic to turn "Control_L" to "Control L".
Comment 1 ninjalj 2021-02-28 02:52:19 UTC
The patch included in #1 also changes to handakuten from its non-spacing mark to its spacing symbol variant for good measure.
Comment 2 Bug Janitor Service 2021-03-09 22:27:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/378
Comment 3 Harald Sitter 2021-03-23 13:24:44 UTC
Git commit a84979bc5936e90e4d69b40907df6c6fb2e3a013 by Harald Sitter, on behalf of Luis Javier Merino Morán.
Committed on 23/03/2021 at 13:22.
Pushed by sitter into branch 'master'.

[kcms/keyboard] tastenbrett: fix diacritics display in keyboard preview

In the keyboard preview, most diacritics from the internal
QHash<unsigned long, char> deadMap don't show up, since their values
don't fit on a char.

On my system, non-spacing diacritics still don't show up after fixing
that.  Unicode recommends applying them to NBSP to exhibit them in
isolation.  However, doing that, I get the diacritic applied to what
appears to be the replacement character (the enclosed interrogation
thingie).  So apply them to a SPACE character (not recommended since
Unicode 4.1).

While we're at it, change the handakuten from its non-spacing mark to
its spacing symbol variant for good measure.

Also "_" doesn't appear, since it is turned to a blank by the logic to
turn "Control_L" to "Control L".

M  +22   -4    kcms/keyboard/tastenbrett/key.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/a84979bc5936e90e4d69b40907df6c6fb2e3a013
Comment 4 ninjalj 2024-06-30 11:28:00 UTC
*** Bug 436523 has been marked as a duplicate of this bug. ***