[kcms/keyboard] tastenbrett: fix diacritics display in keyboard preview

In the keyboard preview, most diacritics from the internal
QHash<unsigned long, char> deadMap don't show up, since their values
don't fit on a char.

On my system, non-spacing diacritics still don't show up after fixing
that.  Unicode recommends applying them to NBSP to exhibit them in
isolation.  However, doing that, I get the diacritic applied to what
appears to be the replacement character (the enclosed interrogation
thingie).  So apply them to a SPACE character (not recommended since
Unicode 4.1).

While we're at it, change the handakuten from its non-spacing mark to
its spacing symbol variant for good measure.

Also "_" doesn't appear, since it is turned to a blank by the logic to
turn "Control_L" to "Control L".

BUG: 433728